# flexBox_CPP

./: .gitignore  .gitmodules  Doxyfile  README.md  README.txt  _2examples_2sample_files_8h_source.html  annotated.html  catch_8hpp_source.html  class_timer-members.html  class_timer.html  classes.html  classflex_box-members.html  classflex_box.html  classflex_box_data-members.html  classflex_box_data.html  classflex_box_data_c_p_u-members.html  classflex_box_data_c_p_u.html  classflex_box_data_g_p_u-members.html  classflex_box_data_g_p_u.html  classflex_concat_operator-members.html  classflex_diagonal_operator.html  classflex_full_matrix-members.html  classflex_full_matrix.html  classflex_gradient_operator.html  classflex_linear_operator-members.html  classflex_linear_operator.html  classflex_matrix-members.html  classflex_matrix.html  classflex_matrix_g_p_u-members.html  classflex_matrix_g_p_u.html  classflex_matrix_logical-members.html  classflex_matrix_logical.html  classflex_prox.html  classflex_prox_dual_box_constraint-members.html  classflex_prox_dual_box_constraint.html  classflex_prox_dual_data_huber-members.html  classflex_prox_dual_data_huber.html  classflex_prox_dual_data_l1-members.html  classflex_prox_dual_data_l2-members.html  classflex_prox_dual_frobenius-members.html  (+92 more)
doxygen/: Doxyfile  citations.bib
doxygen/html/: citelist.html  classflex_box-members.html  classflex_box_data_c_p_u.html  classflex_box_data_g_p_u.html  classflex_concat_operator.html  classflex_diagonal_operator-members.html  classflex_gradient_operator-members.html  classflex_identity_operator-members.html  classflex_identity_operator.html  classflex_prox-members.html  classflex_prox_dual_data_k_l-members.html  classflex_prox_dual_data_k_l.html  classflex_prox_dual_data_l1.html  classflex_prox_dual_data_l2.html  classflex_prox_dual_frobenius.html  classflex_prox_dual_huber.html  classflex_prox_dual_l1_aniso.html  classflex_prox_dual_l1_iso.html  classflex_prox_dual_l2-members.html  classflex_solver.html  classflex_solver_primal_dual-members.html  classflex_solver_primal_dual.html  classflex_superpixel_operator.html  classflex_term.html  classflex_zero_operator-members.html  dir_3e6cdc1fa4e0ea2bb83c7368324725f5.html  dir_62969c8470ea4665091026a410f58700.html  dir_8fd0369fbfc41794821d5e223b028753.html  files.html  flex_box_data_8h_source.html  flex_concat_operator_8h_source.html  flex_identity_operator_8h_source.html  flex_linear_operator_8h_source.html  flex_matrix_8h_source.html  flex_matrix_g_p_u_8h_source.html  flex_prox_8h_source.html  flex_prox_dual_box_constraint_8h_source.html  flex_prox_dual_data_l2_8h_source.html  flex_prox_dual_frobenius_8h_source.html  flex_prox_dual_inner_product_8h_source.html  (+13 more)
doxygen/html/latex/: class_timer.tex  classflex_box.tex  classflex_box_data.eps  classflex_box_data_c_p_u.tex  classflex_box_data_g_p_u.eps  classflex_box_data_g_p_u.tex  classflex_concat_operator.eps  classflex_diagonal_operator.eps  classflex_diagonal_operator.tex  classflex_linear_operator.eps  (+26 more)
latex/: annotated.tex  classflex_box.tex  classflex_box_data.tex  classflex_box_data_c_p_u.eps  classflex_concat_operator.tex  classflex_full_matrix.eps  classflex_full_matrix.tex  classflex_gradient_operator.eps  classflex_gradient_operator.tex  classflex_linear_operator.eps  classflex_linear_operator.tex  classflex_matrix_g_p_u.eps  classflex_matrix_g_p_u.tex  classflex_matrix_logical.eps  classflex_matrix_logical.tex  classflex_prox.eps  classflex_prox.tex  classflex_prox_dual_box_constraint.eps  classflex_prox_dual_box_constraint.tex  classflex_prox_dual_data_huber.eps  classflex_prox_dual_data_huber.tex  classflex_prox_dual_data_k_l.eps  classflex_prox_dual_data_k_l.tex  classflex_prox_dual_data_l1.eps  classflex_prox_dual_data_l2.eps  classflex_prox_dual_data_l2.tex  classflex_prox_dual_frobenius.eps  classflex_prox_dual_frobenius.tex  classflex_prox_dual_huber.eps  classflex_prox_dual_inner_product.tex  classflex_prox_dual_l1_aniso.eps  classflex_prox_dual_l1_iso.tex  classflex_prox_dual_l2.tex  classflex_prox_dual_l2_inf.eps  classflex_prox_dual_l2_inf.tex  classflex_prox_dual_l_inf.eps  classflex_prox_dual_l_inf.tex  classflex_prox_dual_labeling.eps  classflex_prox_dual_labeling.tex  classflex_solver_primal_dual.eps  (+32 more)
search/: all_0.js  all_1.js  all_10.js  all_12.js  all_2.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_14.js  classes_2.js  classes_4.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  enums_0.js  enums_1.js  enums_2.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  (+5 more)
source/: CMakeLists.txt  flexBox.h  mainPage.dox  tools.h
source/cmake/: Copyright.txt  FlexBoxCudaFlags.cmake
source/data/: flexBoxData.h  flexBoxDataCPU.h  flexBoxDataGPU.h
source/examples/: CMakeLists.txt  exampleROF.cpp  exampleROF.cu  exampleSegmentation.cpp  sampleFiles.h.in
source/operator/: flexConcatOperator.h  flexDiagonalOperator.h  flexFullMatrix.h  flexGradientOperator.h  flexIdentityOperator.h  flexLinearOperator.h  flexMatrix.h  flexMatrixGPU.h  flexMatrixLogical.h  flexPermutationOperator.h  flexSubsamplingOperator.h  flexSuperpixelOperator.h  flexZeroOperator.h
source/prox/: flexProx.h  flexProxDualBoxConstraint.h  flexProxDualDataHuber.h  flexProxDualDataKL.h  flexProxDualDataL1.h  flexProxDualDataL2.h  flexProxDualFrobenius.h  flexProxDualHuber.h  flexProxDualInnerProduct.h  flexProxDualL1Aniso.h  flexProxDualL1Iso.h  flexProxDualL2.h  flexProxDualL2Inf.h  flexProxDualLInf.h  flexProxDualLabeling.h
source/solver/: flexSolver.h  flexSolverPrimalDual.h  flexSolverPrimalDualCuda.h
source/term/: flexTerm.h  flexTermDual.h  flexTermPrimal.h
source/tests/: CMakeLists.txt  flexBoxTest.cpp  testAll.cpp  testOperators.cpp  testOperators.cu  testProx.cpp  testProx.cu
source/wrappers/matlab/: CMakeLists.txt  functions.cpp  functions.cu  project.def
(+15 files in other folders)
